Fix a crash, basically I was asleep when move these 2 connects, sorry guys :/

BUG: 251359